# ca

ca-gpt-free-v9/: .gitignore  Makefile  README.md  package-lock.json  package.json
ca-gpt-free-v9/.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml  init.sh
ca-gpt-free-v9/.github/workflows/: ci.yml  nightly.yml
ca-gpt-free-v9/ai-service/: .dockerignore  Dockerfile  pyproject.toml
ca-gpt-free-v9/ai-service/ai_service/: config.py  main.py  utils.py
ca-gpt-free-v9/ai-service/ai_service/middleware/: auth.py
ca-gpt-free-v9/ai-service/ai_service/models/: __init__.py  prompt.py
ca-gpt-free-v9/ai-service/ai_service/nodes/: __init__.py  base_node.py  chat_node.py  explain_node.py  yaml_clean_node.py
ca-gpt-free-v9/ai-service/ai_service/services/: prompt_loader.py
ca-gpt-free-v9/shared/: permissions.py  permissions.ts
